Fix alignment bug

--- a/scipost/static/scipost/assets/css/_nav.scss
+++ b/scipost/static/scipost/assets/css/_nav.scss
@@ -11,7 +11,7 @@
     text-align: center;
     white-space: nowrap;
     overflow-x: auto;
-    overflow-y: auto;
+    overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
 
     .tab-nav-inner {
